--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                 </div>
             </div>
         </div>
-        <div class='container qandaScreen' hidden>
+        <div class='container qandaScreen' style='display:none;'>
             <div class='row'>
                 <div class='col-6 question'><div>Some Q</div></div>
                 <div class="col-6 answer"><div>Some A</div></div>
             </div>
         </div>
-        <div class='container summaryScreen' hidden>
+        <div class='container summaryScreen' style='display:none;'>
             <div class='row'></div>
         </div>
     </body>
